# tsolc

./: LICENSE  README.md  pyproject.toml
showcase/: showcase.sol
transpiler/: main.py
